Getting rid of text-align issues
no more left text-align, should mean that text continues to be centered

--- a/src/components/PhoneNumberInput.scss
+++ b/src/components/PhoneNumberInput.scss
@@ -11,7 +11,5 @@
 
 	align-items: center;
 
-	text-align: left;
-
 	justify-content: space-around;
 }
