--- a/src/components/Submit.scss
+++ b/src/components/Submit.scss
@@ -8,15 +8,10 @@
 
 	align-items: center;
 
-	text-align: left;
-
 	justify-content: space-around;
 
 	button {
 		margin-left: 2.5rem;
 		margin-right: 2.5rem;
-	}
-	.text-confirm {
-		text-align: center;
 	}
 }
